--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-<!-- templates/base.html -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,13 +10,34 @@
   </head>
   <body class="p-4">
     <header class="mb-4">
-      <a href="{{ url_for('home') }}">
-        <img
-          src="{{ url_for('static', filename='Bomi-Logo-1-1.png') }}"
-          height="50"
-          alt="Home"
-        />
-      </a>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{{ url_for('home') }}">
+            <img
+              src="{{ url_for('static', filename='Bomi-Logo-1-1.png') }}"
+              height="50"
+              alt="Home"
+            />
+          </a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="{{ url_for('home') }}"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="{{ url_for('scrape') }}"
+                >Scraper</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="{{ url_for('upload') }}"
+                >Uploader</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <main class="container">
       {% with messages = get_flashed_messages(with_categories=true) %} {% if
